# signal_analysis_project

./: CMakeLists.txt  README.md  signal_analysis_project.kdev4
.kdev4/: signal_analysis_project.kdev4
src/: buffer.cpp  buffer.h  main.cpp  ops.cpp  ops.h  tests.cpp  tests.h
tests_results/: 97_analysis_leleccum.txt  97_analysis_lifting_leleccum.txt  97_analysis_lifting_ligne_milieu.txt  97_analysis_ligne_milieu.txt  97_analysis_ramp.txt  97_synthesis_leleccum.txt  97_synthesis_lifting_leleccum.txt  97_synthesis_ramp.txt  amr_ligne_milieu_niveau_2.txt  amr_ligne_milieu_niveau_4.txt  amr_ligne_milieu_niveau_8.txt  generates_plots.py  haar_analysis_leleccum.txt  haar_analysis_ligne_milieu.txt  haar_analysis_ramp.txt  haar_synthesis_leleccum.txt  iamr_ligne_milieu_niveau_8.txt  leleccum.txt
